Fix-140: Fixed alignment of search form in Site Administration.

--- a/scss/trema/admin.scss
+++ b/scss/trema/admin.scss
@@ -116,14 +116,6 @@ body.path-admin.pagelayout-maintenance {
         max-width: none;
         padding: 0;
         margin: 0 auto;
-
-        .mr-auto {
-            margin-right: 0 !important;
-        }
-
-        .ml-auto {
-            margin-left: 0 !important;
-        }
     }
 
     #page-content {
